docs/how-to/webhook/requiredlabels/bad-example-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    "zone": "secure"
    "appid": "testapp"
