docs/how-to/webhook/requiredlabels/good-example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    zone: secure
    status: dev
    appid: testpod
    app: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      name: test
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: "quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17"
